# src/domain/entity/mod.rs
@@ -2,20 +2,15 @@
 //!
 //! Generated by metaphor-schema. Do not edit manually.
 
-pub mod portal_audit_log;
 pub mod portal_invite;
 pub mod portal_signup_policy;
 pub mod portal_token;
 pub mod portal_user;
-pub mod portal_audit_event;
 pub mod portal_invite_status;
 pub mod portal_token_status;
 pub mod portal_user_status;
 
 // Re-exports
-pub use portal_audit_log::PortalAuditLog;
-pub use portal_audit_log::PortalAuditLogBuilder;
-pub use portal_audit_log::PortalAuditLogId;
 pub use portal_invite::PortalInvite;
 pub use portal_invite::PortalInviteBuilder;
 pub use portal_invite::PortalInviteId;
@@ -28,7 +23,6 @@ pub use portal_token::PortalTokenId;
 pub use portal_user::PortalUser;
 pub use portal_user::PortalUserBuilder;
 pub use portal_user::PortalUserId;
-pub use portal_audit_event::PortalAuditEvent;
 pub use portal_invite_status::PortalInviteStatus;
 pub use portal_token_status::PortalTokenStatus;
 pub use portal_user_status::PortalUserStatus;
