# src/domain/event/portal_audit_log_event_handlers.rs
@@ -1,10 +1,0 @@
-//! Event handler trait for PortalAuditLog events
-//!
-//! Generated by metaphor-schema. Do not edit manually.
-
-use backbone_messaging::EventHandler;
-use super::PortalAuditLogEvent;
-
-/// Event handler for PortalAuditLog events.
-/// Implement this trait to react to PortalAuditLog lifecycle events.
-pub trait PortalAuditLogEventHandler: EventHandler<PortalAuditLogEvent> {}
